--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "-": "0.0.1",
+    "@devexpress/dx-grid-core": "^2.6.3",
     "@devexpress/dx-react-core": "^2.6.3",
+    "@devexpress/dx-react-grid": "^2.6.3",
+    "@devexpress/dx-react-grid-material-ui": "^2.6.3",
     "@devexpress/dx-react-scheduler": "^2.6.3",
     "@devexpress/dx-react-scheduler-material-ui": "^2.6.3",
     "@material-ui/core": "^4.10.0",
