--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@devexpress/dx-react-scheduler-material-ui": "^2.6.3",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -19,6 +20,9 @@
     "@types/node": "^12.12.42",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.19.2",
+    "axios-extensions": "^3.1.3",
+    "immer": "^7.0.5",
     "install": "^0.13.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -26,7 +30,8 @@
     "react-scripts": "3.4.1",
     "sass": "^1.26.5",
     "to": "^0.2.9",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "use-immer": "^0.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
