--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
     "@types/node": "^12.12.42",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.2",
+    "@typescript-eslint/parser": "^3.9.0",
     "axios": "^0.19.2",
     "axios-extensions": "^3.1.3",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "immer": "^7.0.5",
     "install": "^0.13.0",
     "node-sass": "^4.14.1",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "sass": "^1.26.5",
+    "styled-components": "^5.1.1",
     "to": "^0.2.9",
     "typescript": "^3.9.3",
     "use-immer": "^0.4.0"
