--- a/package.json
+++ b/package.json
@@ -3,50 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "-": "0.0.1",
-    "@devexpress/dx-grid-core": "^2.6.3",
-    "@devexpress/dx-react-core": "^2.6.3",
-    "@devexpress/dx-react-grid": "^2.6.3",
-    "@devexpress/dx-react-grid-material-ui": "^2.6.3",
-    "@devexpress/dx-react-scheduler": "^2.6.3",
-    "@devexpress/dx-react-scheduler-material-ui": "^2.6.3",
     "@material-ui/core": "^4.10.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.42",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "@types/styled-components": "^5.1.2",
-    "@typescript-eslint/parser": "^3.9.0",
     "axios": "^0.19.2",
-    "axios-extensions": "^3.1.3",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "immer": "^7.0.5",
-    "install": "^0.13.0",
     "node-sass": "^4.14.1",
-    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "sass": "^1.26.5",
-    "styled-components": "^5.1.1",
-    "to": "^0.2.9",
-    "typescript": "^3.9.3",
-    "use-immer": "^0.4.0"
+    "styled-components": "^5.1.1"
   },
+  "devDependencies": {
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.54",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.2",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.7"
+  },
+  "optionalDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/*.{js,ts,tsx} --quiet --fix"
   },
   "browserslist": {
     "production": [
@@ -59,6 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "optionalDependencies": {}
+  }
 }
