--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ build:
   image: node
   script:
     - echo "Start building App"
+    - echo "REACT_APP_API_URL=https://wmi-backend.plannaplan.pl" > .env
     - yarn
     - CI= yarn run build
     - echo "Build successfully!"
