--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "16.8.0",
     "react-click-away-listener": "^1.4.3",
     "react-dom": "^16.13.1",
+    "react-loading-overlay": "^1.0.1",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
