--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.19.2",
     "notistack": "^1.0.1",
-    "react": "16.8.0",
+    "react": "16.9.0",
     "react-click-away-listener": "^1.4.3",
     "react-dom": "^16.13.1",
     "react-loading-overlay": "^1.0.1",
@@ -17,6 +17,9 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@types/jest": "^26.0.19",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.2",
@@ -28,6 +31,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "prettier": "^2.2.0",
+    "ts-jest": "^26.4.4",
     "typescript": "^3.9.7"
   },
   "scripts": {
