--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.19.2",
+    "date-fns": "^2.16.1",
     "notistack": "^1.0.1",
     "react": "16.8.0",
     "react-click-away-listener": "^1.4.3",
